# VideoPro

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/droidhubworld/videopro/: ExampleInstrumentedTest.kt
app/src/cpp/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/droidhubworld/videopro/: MainActivity.kt  VideoProApplication.kt
app/src/main/java/com/droidhubworld/videopro/ui/screen/home/: Home.kt  HomeViewModel.kt
app/src/main/java/com/droidhubworld/videopro/ui/screen/main/: MainScreen.kt
app/src/main/java/com/droidhubworld/videopro/ui/screen/rough/: RoughScreen.kt
app/src/main/java/com/droidhubworld/videopro/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/droidhubworld/videopro/utils/: Common.kt  FFmpegNative.kt
app/src/main/res/drawable/: ic_audio.xml  ic_audio_muted.xml
app/src/test/java/com/droidhubworld/videopro/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
